force-app/main/default/objects/Account/fields/Acc_CodigoCliente__c.field-meta.xml
<CustomField>
    <fullName>Acc_CodigoCliente__c</fullName>
    <externalId>true</externalId>
    <label>Código de cliente</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>