force-app/main/default/objects/Account/fields/Acc_CodigoPoblacion__c.field-meta.xml
<CustomField>
    <fullName>Acc_CodigoPoblacion__c</fullName>
    <label>Código población envío</label>
    <length>10</length>
    <type>Text</type>
</CustomField>