force-app/main/default/objects/Account/fields/Acc_DescFinEsp__c.field-meta.xml
<CustomField>
    <fullName>Acc_DescFinEsp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(Y/N)</inlineHelpText>
    <label>DescFinEsp</label>
    <type>Checkbox</type>
</CustomField>