force-app/main/default/objects/Account/fields/Acc_DiasCredito__c.field-meta.xml
<CustomField>
    <fullName>Acc_DiasCredito__c</fullName>
    <label>Días de crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-1</fullName>
                <label>Contado</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>30 días</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>45 días</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>15 días</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>8 días</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>60 días</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>90 días</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>75 días</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>120 días</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>180 días</label>
            </value>
            <value>
                <fullName>1= 8 días</fullName>
                <isActive>false</isActive>
                <label>1= 8 días</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>