force-app/main/default/objects/Account/fields/Acc_Grupo__c.field-meta.xml
<CustomField>
    <fullName>Acc_Grupo__c</fullName>
    <label>Grupo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>CORPORATIVO</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Nacional</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>Extranjero</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>Servicio</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>BMW</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>Bombardier</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>Boutique</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>China</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>Harley Davidson</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>Honda</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>Italika</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>Kawasaki</label>
            </value>
            <value>
                <fullName>112</fullName>
                <label>KTM</label>
            </value>
            <value>
                <fullName>113</fullName>
                <label>Polaris</label>
            </value>
            <value>
                <fullName>114</fullName>
                <label>Suzuki</label>
            </value>
            <value>
                <fullName>115</fullName>
                <label>Triumph</label>
            </value>
            <value>
                <fullName>116</fullName>
                <label>Yamaha</label>
            </value>
            <value>
                <fullName>117</fullName>
                <label>Diseñador de Motos</label>
            </value>
            <value>
                <fullName>118</fullName>
                <label>Bajaj</label>
            </value>
            <value>
                <fullName>119</fullName>
                <label>Patrocinios</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>Motos Chinas</label>
            </value>
            <value>
                <fullName>121</fullName>
                <label>Fabricacion y Vta.</label>
            </value>
            <value>
                <fullName>122</fullName>
                <label>Multimarcas</label>
            </value>
            <value>
                <fullName>123</fullName>
                <label>Taller</label>
            </value>
            <value>
                <fullName>124</fullName>
                <label>Moto boutique</label>
            </value>
            <value>
                <fullName>125</fullName>
                <label>Accesorios</label>
            </value>
            <value>
                <fullName>126</fullName>
                <label>Ventas de Accesorios</label>
            </value>
            <value>
                <fullName>127</fullName>
                <label>Comercializadora</label>
            </value>
            <value>
                <fullName>129</fullName>
                <label>Ducati</label>
            </value>
            <value>
                <fullName>130</fullName>
                <label>ENDURO NAC.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>