force-app/main/default/objects/Account/fields/Acc_IdGrupo__c.field-meta.xml
<CustomField>
    <fullName>Acc_IdGrupo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IdGrupo</label>
    <referenceTo>Acc_Grupo_Cuentas__c</referenceTo>
    <relationshipLabel>Grupos de Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>