force-app/main/default/objects/Account/fields/Acc_Referencia_Bancaria__c.field-meta.xml
<CustomField>
    <fullName>Acc_Referencia_Bancaria__c</fullName>
    <label>Referencia Bancaria</label>
    <length>10</length>
    <type>Text</type>
</CustomField>