force-app/main/default/objects/Account/recordTypes/Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Business_Account</fullName>
    <active>true</active>
    <description>Bids &amp; Contracts only; business partners, distributors, non-transactional accounts</description>
    <label>Business Account</label>
</RecordType>